links now opening new tabs and directing correctly

--- a/index.html
+++ b/index.html
@@ -26,11 +26,31 @@
     <div id="column-2">
 
       <div class="content" id="fun"><p class="text">Fun! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+
       <div class="content" id="about"><p class="text">About Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+
       <div class="content" id="projects"><p class="text">Projects Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-      <div class="content" id="contact"><p class="text">Contact Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+
+      <div class="content" id="contact">
+        <p class="content-title">Contact </p>
+        <p class="text" class="contact-details" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
+        <p class="text" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p><br>
+        <p class="text" class="contact-details" class="github-link" onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
+        <p class="text" class="github-link" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p><br>
+
+        <p class="text" class="contact-details">Email</p>
+        <p class="text">theojames1989@gmail.com</p><br>
+        <p class="text" class="contact-details">Contact Number</p>
+        <p class="text">0432 665 747</p>
+
+      </div>
 
     </div>
+
+    <div id="column-3">
+
+    </div>
+
 
   </div>
 
