--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row">
     	<div id="particles-js" id="column-1" class="col-md-3">
-        <div class="nav-container"><p id="nav-fun">Fun</p></div>
+        <!-- <div class="nav-container"><p id="nav-fun">Fun</p></div> -->
         <div class="nav-container"><p id="nav-about">About</p></div>
         <div class="nav-container"><p id="nav-projects">Projects</p></div>
         <div class="nav-container"><p id="nav-contact">Contact</p></div>
@@ -29,11 +29,36 @@
 
 
       <div class="col-md-6">
-        <div class="content" id="fun"><p class="text">Fun! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
 
-        <div class="content" id="about"><p class="text">About Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+        <div class="content" id="about">
+          <p class="content-title">About</p>
+          <p class="text">I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p></div>
 
-        <div class="content" id="projects"><p class="text">Projects Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+        <div class="content" id="projects">
+          <p class="content-title">Projects</p>
+          <p class="text">Virtual Auslan  Interpreter - Javascript/Leap Motion<br>
+          The Auslan Interpreter is designed to help those who are unable to understand the language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.<br><br>
+
+          <br><br>
+
+          Gooder Reads - Ruby on Rails<br>
+          A book review website designed to have readers, rather than critics, write reviews on books they have read, as well as comment on the books other people have read.<br><br>
+          <img src="images/GooderReadsEdit.png" alt="">
+
+
+          <br><br>
+
+          Fråga - Javascript/Ruby on Rails<br>
+          Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.<br><br>
+          <img src="images/FragaEdit.png" alt="">
+
+          <br><br>
+
+          Tic Tac Toe - Javascript<br>
+          This project represents my first attempt at creating a website from start to finish, using html, css, javascript and JQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.<br><br>
+
+          <img src="https://media.giphy.com/media/poU9Tq2jtlUR2/giphy.gif" alt="Tic tac toe gif">
+          </p></div>
 
         <div class="content" id="contact">
           <p class="content-title">Contact </p>
