--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="container">
     <div class="row">
-    	<div id="particles-js" id="column-1" class="col-md-3">
+    	<div id="column-1" class="col-md-3">
         <!-- <div class="nav-container"><p id="nav-fun">Fun</p></div> -->
         <div class="nav-container"><p id="nav-about">About</p></div>
         <div class="nav-container"><p id="nav-projects">Projects</p></div>
@@ -38,6 +38,8 @@
           <p class="content-title">Projects</p>
           <p class="text">Virtual Auslan  Interpreter - Javascript/Leap Motion<br>
           The Auslan Interpreter is designed to help those who are unable to understand the language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.<br><br>
+
+          <img src="images/AuslanInterpreter.png" alt="">
 
           <br><br>
 
@@ -76,7 +78,7 @@
       </div>
 
 
-      <div class="col-md-3">
+      <div class="col-md-3"  id="particles-js">
 
       </div>
     </div>
