--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
           <p class="text">0432 665 747</p>
 
         </div>
+        <br>
+
+        <div id="particles-js"></div>
       </div>
 
 
-      <div class="col-md-3"  id="particles-js">
+      <div class="col-md-3">
 
       </div>
     </div>
