--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 </head>
 <body>
 
-  <div id='header'><p id='title-name'>James Theo </p><p id='title-web'>Web Developer</p>
+  <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Web Developer</p>
   </div>
 
   <div class="container">
     <div class="row">
     	<div id="column-1" class="col-md-3">
-        <!-- <div class="nav-container"><p id="nav-fun">Fun</p></div> -->
         <div class="nav-container"><p id="nav-about">About</p></div>
         <div class="nav-container"><p id="nav-projects">Projects</p></div>
         <div class="nav-container"><p id="nav-contact">Contact</p></div>
@@ -37,12 +36,23 @@
           <p class="text">Virtual Auslan  Interpreter - Javascript/Leap Motion<br>
           The Auslan Interpreter is designed to help those who are unable to understand the language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.<br><br>
 
+          <div>
+            <p href="https://aparkinbotswana.github.io/Auslan-Interpreter/">See the live site!</a> <p href="https://github.com/aparkinbotswana/Auslan-Interpreter">See the Code!</a>
+          </div>
+          <br><br>
+
           <img src="images/AuslanInterpreter.png" alt="">
 
           <br><br>
 
           Gooder Reads - Ruby on Rails<br>
           A book review website designed to have readers, rather than critics, write reviews on books they have read, as well as comment on the books other people have read.<br><br>
+
+          <div>
+            <p href="">See the live site!</a> <p href="">See the Code!</a>
+          </div>
+          <br><br>
+
           <img src="images/GooderReadsEdit.png" alt="">
 
 
@@ -50,12 +60,24 @@
 
           Fråga - Javascript/Ruby on Rails<br>
           Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.<br><br>
+
+          <div>
+            <p href="">See the live site!</a> <p href="">See the Code!</a>
+          </div>
+          <br><br>
+
           <img src="images/FragaEdit.png" alt="">
 
           <br><br>
 
           Tic Tac Toe - Javascript<br>
           This project represents my first attempt at creating a website from start to finish, using html, css, javascript and JQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.<br><br>
+
+          <div>
+            <p href="https://aparkinbotswana.github.io/tic_tac_toe/">See the live site!</a> <p href="https://github.com/aparkinbotswana/tic_tac_toe">See the Code!</a>
+          </div>
+          <br><br>
+
 
           <img src="https://media.giphy.com/media/poU9Tq2jtlUR2/giphy.gif" alt="Tic tac toe gif">
           </p></div>
