--- a/index.html
+++ b/index.html
@@ -33,54 +33,58 @@
           <p class="text">I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p></div>
 
         <div class="content" id="projects">
-          <p class="text">Virtual Auslan  Interpreter - Javascript/Leap Motion<br>
-          The Auslan Interpreter is designed to help those who are unable to understand the language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.<br><br>
+          <p class="projects-description">Virtual Auslan  Interpreter - JavaScript/Leap Motion</p>
+          <p>The Auslan Interpreter is designed to help those who are unable to understand the language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p><br>
 
           <div>
-            <p href="https://aparkinbotswana.github.io/Auslan-Interpreter/">See the live site!</a> <p href="https://github.com/aparkinbotswana/Auslan-Interpreter">See the Code!</a>
+            <p class="project-links" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">See the live site!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">See the Code!</p>
           </div>
-          <br><br>
+          <br>
 
           <img src="images/AuslanInterpreter.png" alt="">
 
           <br><br>
 
-          Gooder Reads - Ruby on Rails<br>
-          A book review website designed to have readers, rather than critics, write reviews on books they have read, as well as comment on the books other people have read.<br><br>
+          <p class="projects-description">Gooder Reads - Ruby on Rails</p>
+          <p>A book review website designed to have readers, rather than critics, write reviews on books they have read, as well as comment on the books other people have read.</p><br>
 
           <div>
-            <p href="">See the live site!</a> <p href="">See the Code!</a>
+            <p class="project-links" onclick="window.open('https://gooder-reads.herokuapp.com/')">See the live site!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/gooder_reads')">See the Code!</p>
           </div>
-          <br><br>
+          <br>
 
           <img src="images/GooderReadsEdit.png" alt="">
 
 
           <br><br>
 
-          Fråga - Javascript/Ruby on Rails<br>
-          Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.<br><br>
+          <p class="projects-description">Fråga - JavaScript/Ruby on Rails</p>
+          <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p><br>
 
           <div>
-            <p href="">See the live site!</a> <p href="">See the Code!</a>
+            <p class="project-links" onclick="window.open('https://fraga-app.herokuapp.com/')">See the live site!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">See the Code!</p>
           </div>
-          <br><br>
+          <br>
 
           <img src="images/FragaEdit.png" alt="">
 
           <br><br>
 
-          Tic Tac Toe - Javascript<br>
-          This project represents my first attempt at creating a website from start to finish, using html, css, javascript and JQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.<br><br>
+          <p class="projects-description">Tic Tac Toe - JavaScript</p>
+          <p>This project represents my first attempt at creating a website from start to finish, using html, css, JavaScript and JQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.</p><br>
 
           <div>
-            <p href="https://aparkinbotswana.github.io/tic_tac_toe/">See the live site!</a> <p href="https://github.com/aparkinbotswana/tic_tac_toe">See the Code!</a>
+            <p class="project-links" onclick="window.open('https://aparkinbotswana.github.io/tic_tac_toe/Index_tictactoe.html')">See the live site!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/tic_tac_toe')">See the Code!</p>
           </div>
-          <br><br>
+          <br>
 
 
           <img src="https://media.giphy.com/media/poU9Tq2jtlUR2/giphy.gif" alt="Tic tac toe gif">
-          </p></div>
+          </div>
 
         <div class="content" id="contact">
           <p class="text" class="contact-details" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
