added resume for download

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="nav-container"><p id="nav-about">About</p></div>
         <div class="nav-container"><p id="nav-projects">Projects</p></div>
         <div class="nav-container"><p id="nav-contact">Contact</p></div>
+        <div class="nav-container"><a id="nav-resume" href="assets/James_Theo_Resume.pdf" download>Resume</a></div>
       </div>
 
 
@@ -42,7 +43,7 @@
           </div>
           <br>
 
-          <img src="images/AuslanInterpreter.png" alt="">
+          <img class="project-img"  src="images/AuslanInterpreter.png" alt="">
 
           <br><br>
 
@@ -55,7 +56,7 @@
           </div>
           <br>
 
-          <img src="images/GooderReadsEdit.png" alt="">
+          <img class="project-img"  src="images/GooderReadsEdit.png" alt="">
 
 
           <br><br>
@@ -69,7 +70,7 @@
           </div>
           <br>
 
-          <img src="images/FragaEdit.png" alt="">
+          <img class="project-img"  src="images/FragaEdit.png" alt="">
 
           <br><br>
 
@@ -83,7 +84,7 @@
           <br>
 
 
-          <img src="https://media.giphy.com/media/poU9Tq2jtlUR2/giphy.gif" alt="Tic tac toe gif">
+          <img class="project-img"  src="https://media.giphy.com/media/poU9Tq2jtlUR2/giphy.gif" alt="Tic tac toe gif">
           </div>
 
         <div class="content" id="contact">
