did more work trying to fix nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
   <div class="container">
     <div class="row">
     	<div id="column-1" class="col-md-3">
-        <div class="nav-container"><p id="nav-about">About</p></div>
-        <div class="nav-container"><p id="nav-projects">Projects</p></div>
-        <div class="nav-container"><p id="nav-contact">Contact</p></div>
+        <div class="nav-container">
+          <p id="nav-about" data-target="#about">About</p></div>
+        <div class="nav-container">
+          <p id="nav-projects" data-target="#projects">Projects</p></div>
+        <div class="nav-container">
+          <p id="nav-contact" data-target="#contact">Contact</p></div>
         <div class="nav-container"><a id="nav-resume" href="assets/James_Theo_Resume.pdf" download>Resume</a></div>
       </div>
 
