--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
 </head>
 <body>
 
-  <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Web Developer</p>
+  <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Front End Developer</p>
   </div>
 
   <div class="container">
     <div class="row">
     	<div id="column-1" class="col-md-3">
         <div class="nav-container">
-          <p id="nav-about" data-target="#about">About</p></div>
+          <p class="nav-buttons" id="nav-about" data-target="#about">About</p>
+        </div>
         <div class="nav-container">
-          <p id="nav-projects" data-target="#projects">Projects</p></div>
+          <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p>
+        </div>
         <div class="nav-container">
-          <p id="nav-contact" data-target="#contact">Contact</p></div>
+          <p class="nav-buttons" id="nav-freelance" data-target="#freelance">Freelance</p>
+        </div>
+        <div class="nav-container">
+          <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p>
+        </div>
         <div class="nav-container"><a id="nav-resume" href="assets/James_Theo_Resume.pdf" download>Resume</a></div>
+        <hr>
       </div>
 
 
@@ -89,6 +96,11 @@
 
           <img class="project-img"  src="https://media.giphy.com/media/poU9Tq2jtlUR2/giphy.gif" alt="Tic tac toe gif">
           </div>
+
+          <div class="content" id="freelance">
+            <p class="text">FREELANCE INFO HERE</p>
+          </div>
+
 
         <div class="content" id="contact">
           <p class="text" class="contact-details" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
