fixed up some of the media query for different dfevices

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p>
         </div>
         <div class="nav-container">
-          <p class="nav-buttons" id="nav-freelance" data-target="#freelance">Freelance</p>
-        </div>
+          <!-- <p class="nav-buttons" id="nav-freelance" data-target="#freelance">Freelance</p>
+        </div> -->
         <div class="nav-container">
           <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p>
         </div>
