--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="nav-container">
           <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p>
         </div>
-        <div class="nav-container">
-          <!-- <p class="nav-buttons" id="nav-freelance" data-target="#freelance">Freelance</p>
+        <!-- <div class="nav-container">
+          <p class="nav-buttons" id="nav-freelance" data-target="#freelance">Freelance</p>
         </div> -->
         <div class="nav-container">
           <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p>
