--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Lancelot|Marcellus+SC|Open+Sans:300|Poiret+One|Cinzel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Slabo|Marcellus+SC|Open+Sans:300|Poiret+One|Cinzel" rel="stylesheet">
   <script src="js/main.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
@@ -49,7 +49,7 @@
 
           <div>
             <p class="project-links" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">See the live site!</p>
-            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">See the Code!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">See the code!</p>
           </div>
           <br>
 
@@ -62,7 +62,7 @@
 
           <div>
             <p class="project-links" onclick="window.open('https://gooder-reads.herokuapp.com/')">See the live site!</p>
-            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/gooder_reads')">See the Code!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/gooder_reads')">See the code!</p>
           </div>
           <br>
 
@@ -76,7 +76,7 @@
 
           <div>
             <p class="project-links" onclick="window.open('https://fraga-app.herokuapp.com/')">See the live site!</p>
-            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">See the Code!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">See the code!</p>
           </div>
           <br>
 
@@ -85,11 +85,11 @@
           <br><br>
 
           <p class="projects-description">Tic Tac Toe - JavaScript</p>
-          <p>This project represents my first attempt at creating a website from start to finish, using html, css, JavaScript and JQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.</p><br>
+          <p>This project represents my first attempt at creating a website from start to finish, using HTML, CSS, JavaScript and jQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.</p><br>
 
           <div>
             <p class="project-links" onclick="window.open('https://aparkinbotswana.github.io/tic_tac_toe/Index_tictactoe.html')">See the live site!</p>
-            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/tic_tac_toe')">See the Code!</p>
+            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/tic_tac_toe')">See the code!</p>
           </div>
           <br>
 
