fixed some more css

--- a/index.html
+++ b/index.html
@@ -103,14 +103,15 @@
 
 
         <div class="content" id="contact">
-          <p class="text" class="contact-details" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
-          <p class="text" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p><br>
-          <p class="text" class="contact-details" class="github-link" onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
-          <p class="text" class="github-link" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p><br>
+          <p class="text" class="linkedin-link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
+          <p class="contact-details" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p>
+          <br>
+          <p class="text" class="github-link" onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
+          <p class="contact-details" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p><br>
 
-          <p class="text" class="contact-details">Email</p>
+          <p class="text">Email</p>
           <p class="text">theojames1989@gmail.com</p><br>
-          <p class="text" class="contact-details">Contact Number</p>
+          <p class="text">Contact Number</p>
           <p class="text">0432 665 747</p>
 
         </div>
