minor change to content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="content" id="projects">
           <p class="projects-description">Virtual Auslan  Interpreter - JavaScript/Leap Motion</p>
-          <p>The Auslan Interpreter is designed to help those who are unable to understand the language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p><br>
+          <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p><br>
 
           <div>
             <p class="project-links" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">See the live site!</p>
