--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
           <br>
 
-          <img class="project-img"  src="images/AuslanInterpreter.png" alt="" width="100%">
+          <img class="project-img"  src="images/AuslanInterpreter.png" alt="">
 
           <br><br>
 
