have not done anything. commiting to change over to master

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-  <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Front End Developer</p>
+  <!-- <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Front End Developer</p>
   </div>
 
   <div class="columnParent">
@@ -35,9 +35,6 @@
         <div class="nav-container">
           <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p>
         </div>
-        <!-- <div class="nav-container">
-          <p class="nav-buttons" id="nav-freelance" data-target="#freelance">Freelance</p>
-        </div> -->
         <div class="nav-container">
           <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p>
         </div>
@@ -134,7 +131,7 @@
       </div>
 
 
-  </div>
+  </div> -->
 
 
 </body>
