Oridomi now working. FUCKING HELL!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105786823-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105786823-1"></script> -->
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -18,10 +18,23 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Slabo|Marcellus+SC|Open+Sans:300|Poiret+One|Cinzel" rel="stylesheet">
-  <script src="js/main.js" charset="utf-8"></script>
+
+  <script src="js/bundle.js" charset="utf-8"></script>
+
+  <!-- <script src="js/oridomi.min.js" charset="utf-8"></script> -->
+
+  <!-- <script src="js/hexaflip.min.js" charset="utf-8"></script>
+
+  <script src="js/main.js" charset="utf-8"></script> -->
   <title>James Theo: Web Developer</title>
 </head>
 <body>
+
+  <div id="hex"></div>
+  <div class="paper">
+    <img src="images/FragaEdit.png" alt="">
+  </div>
+
 
   <!-- <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Front End Developer</p>
   </div>
