changed folder structure and included sass

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" charset="utf-8"></script>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="build/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Slabo|Marcellus+SC|Open+Sans:300|Poiret+One|Cinzel" rel="stylesheet">
 
-  <script src="js/bundle.js" charset="utf-8"></script>
+  <script src="build/js/bundle.js" charset="utf-8"></script>
 
   <!-- <script src="js/oridomi.min.js" charset="utf-8"></script> -->
 
@@ -32,7 +32,7 @@
 
   <div id="hex"></div>
   <div class="paper">
-    <img src="images/FragaEdit.png" alt="">
+    <img src="build/images/FragaEdit.png" alt="">
   </div>
 
 
@@ -50,7 +50,7 @@
         <div class="nav-container">
           <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p>
         </div>
-        <div class="nav-container"><a id="nav-resume" href="assets/James_Theo_Resume.pdf" download>Resume</a></div>
+        <div class="nav-container"><a id="nav-resume" href="build/assets/James_Theo_Resume.pdf" download>Resume</a></div>
         <hr>
       </div>
 
