nav bar now working and responsive

--- a/index.html
+++ b/index.html
@@ -36,26 +36,30 @@
   </div>
 
 
-  <!-- <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Front End Developer</p>
+  <div id='main-heading'><p id='title-name'>James Theo </p><p id='title-web'>Front End Developer</p>
   </div>
 
-  <div class="columnParent">
-    	<div id="column-1" class="secondaryColumn">
-        <div class="nav-container">
+  <div class="parent-column">
+
+    	<div id="nav-column" class="center">
+        <div class="nav-container borderblack">
           <p class="nav-buttons" id="nav-about" data-target="#about">About</p>
         </div>
-        <div class="nav-container">
+        <div class="nav-container borderblack">
           <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p>
         </div>
-        <div class="nav-container">
+        <div class="nav-container borderblack">
           <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p>
         </div>
-        <div class="nav-container"><a id="nav-resume" href="build/assets/James_Theo_Resume.pdf" download>Resume</a></div>
-        <hr>
+        <div class="nav-container borderblack"><a id="nav-resume" href="build/assets/James_Theo_Resume.pdf" download>Resume</a></div>
+      </div>
+
+      <div id="content-column">
+        <p>this is going to be a huge fucking column</p>
       </div>
 
 
-      <div class="mainColumn">
+      <!-- <div class="mainColumn">
 
         <div class="content" id="about">
           <p class="text">I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p></div>
@@ -140,10 +144,10 @@
 
       <div class="secondaryColumn">
 
-      </div>
+      </div> -->
 
 
-  </div> -->
+  </div>
 
 
 </body>
