fixed positioning of nav

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div class="flex-1"></div>
       <div class="flex-3">
         <div class="container">
+          <div class="flex-1"></div>    
           <div class="flex-1 name">        
             <h1 id="first-letter" class="letter">T</h1>
           </div>
@@ -74,8 +75,6 @@
 
     <div class="parent-column">
       <div id="nav-column" class="center list">
-        <!-- <div id="second"><p>this</p></div> -->
-        <div class="stupid"></div>
         <div class="nav-container">
           <p class="nav-buttons" id="nav-about" data-target="#about">About</p>
         </div>
