--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <section id="heading-name">
+  <section id="heading-name" class="sticky">
     <div class="container center">
       <div class="flex-1"></div>
         <div class="flex-3">
