commiting to show MEENA brnaching. Dont

--- a/index.html
+++ b/index.html
@@ -23,69 +23,71 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <section id="heading-name" class="sticky">
-    <div class="container center">
-      <div class="flex-1"></div>
+  <section id="behind-name" class="z-1">
+    <div id="heading-name" class="sticky z-2">
+      <div class="container center">
+        <div class="flex-1"></div>
+          <div class="flex-3">
+            <div class="container">
+              <div class="flex-1 name">        
+                <h1 id="first-letter" class="letter">J</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">A</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">M</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">E</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">S</h1>
+              </div>
+            </div>
+        </div>
+        <!-- <div class="flex-1"></div>       -->
+      </div>
+      <div class="container center">
+        <div class="flex-1"></div>
         <div class="flex-3">
           <div class="container">
+            <div class="flex-1"></div>    
             <div class="flex-1 name">        
-              <h1 id="first-letter" class="letter">J</h1>
+              <h1 id="first-letter" class="letter">T</h1>
             </div>
             <div class="flex-1">        
-              <h1 class="letter">A</h1>
-            </div>
-            <div class="flex-1">        
-              <h1 class="letter">M</h1>
+              <h1 class="letter">H</h1>
             </div>
             <div class="flex-1">        
               <h1 class="letter">E</h1>
             </div>
             <div class="flex-1">        
-              <h1 class="letter">S</h1>
+              <h1 class="letter">O</h1>
             </div>
           </div>
       </div>
-      <!-- <div class="flex-1"></div>       -->
-    </div>
-    <div class="container center">
-      <div class="flex-1"></div>
-      <div class="flex-3">
-        <div class="container">
-          <div class="flex-1"></div>    
-          <div class="flex-1 name">        
-            <h1 id="first-letter" class="letter">T</h1>
-          </div>
-          <div class="flex-1">        
-            <h1 class="letter">H</h1>
-          </div>
-          <div class="flex-1">        
-            <h1 class="letter">E</h1>
-          </div>
-          <div class="flex-1">        
-            <h1 class="letter">O</h1>
-          </div>
-        </div>
-    </div>
-      <!-- <div class="flex-1"></div> -->
+        <!-- <div class="flex-1"></div> -->
+      </div>
     </div>
   </section>
   
   <section id="content">
 
-    <div class="parent-column">
+    <div class="parent-column sticky">
       <div id="nav-column" class="center list">
         <div class="nav-container">
-          <a class="nav-buttons" href="#about">About</a>
+          <a href="#about"><p class="nav-buttons">About</p></a>
           <!-- <a class="scroll nav-buttons" data-speed="1000" href="#about">About</a> -->
           <!-- <p class="nav-buttons" id="nav-about" data-target="#about">About</p> -->
         </div>
         <div class="nav-container">
-          <a class="nav-buttons" href="#projects">Projects</a>
+          <a href="#projects"><p class="nav-buttons">Projects</p></a>
           <!-- <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p> -->
         </div>
         <div class="nav-container">
           <!-- <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p> -->
-          <a class="nav-buttons" href="#contact">Contact</a>
+          <a href="#contact"><p class="nav-buttons">Contact</p></a>
         </div>
       </div>
 
