fixed some css styling for mobile nav. Noticed the smooth scroll not scrolling to correct position on mobile. Might be because of two differen navs. Having a single nav is now a priority.

--- a/index.html
+++ b/index.html
@@ -94,21 +94,21 @@
       <div id="nav-column-mobile" class="center">
         <div id="mobile-1" class="nav-container">
           <div>
-            <a class="nav-buttons" href="#about">About</a>
-            <!-- <p class="nav-buttons" id="nav-about" data-target="#about">About</p> -->
+              <a href="#about"><p class="nav-buttons">About</p></a>
+              <!-- <p class="nav-buttons" id="nav-about" data-target="#about">About</p> -->
           </div>
         </div>
         <div id="mobile-2" class="nav-container">
           <div>
-            <a class="nav-buttons" href="#projects">Projects</a>
+            <a href="#projects"><p class="nav-buttons">Projects</p></a>
 
             <!-- <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p> -->
           </div>
         </div>
         <div id="mobile-3" class="nav-container">
           <div>
-            <a class="nav-buttons" href="#contact">Contact</a>
-            <!-- <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p> -->
+              <a href="#contact"><p class="nav-buttons">Contact</p></a>
+              <!-- <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p> -->
           </div>
         </div>
       </div>
