sticky header and smooth scroll functioning a little better

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <section id="behind-name" class="z-1">
-    <div id="heading-name" class="sticky z-2">
+  <section id="behind-name">
+    <div id="heading-name" class="sticky">
       <div class="container center">
         <div class="flex-1"></div>
           <div class="flex-3">
@@ -78,15 +78,11 @@
       <div id="nav-column" class="center list">
         <div class="nav-container">
           <a href="#about"><p class="nav-buttons">About</p></a>
-          <!-- <a class="scroll nav-buttons" data-speed="1000" href="#about">About</a> -->
-          <!-- <p class="nav-buttons" id="nav-about" data-target="#about">About</p> -->
         </div>
         <div class="nav-container">
           <a href="#projects"><p class="nav-buttons">Projects</p></a>
-          <!-- <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p> -->
         </div>
         <div class="nav-container">
-          <!-- <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p> -->
           <a href="#contact"><p class="nav-buttons">Contact</p></a>
         </div>
       </div>
@@ -95,20 +91,16 @@
         <div id="mobile-1" class="nav-container">
           <div>
               <a href="#about"><p class="nav-buttons">About</p></a>
-              <!-- <p class="nav-buttons" id="nav-about" data-target="#about">About</p> -->
           </div>
         </div>
         <div id="mobile-2" class="nav-container">
           <div>
             <a href="#projects"><p class="nav-buttons">Projects</p></a>
-
-            <!-- <p class="nav-buttons" id="nav-projects" data-target="#projects">Projects</p> -->
           </div>
         </div>
         <div id="mobile-3" class="nav-container">
           <div>
               <a href="#contact"><p class="nav-buttons">Contact</p></a>
-              <!-- <p class="nav-buttons" id="nav-contact" data-target="#contact">Contact</p> -->
           </div>
         </div>
       </div>
