smooth scroll now working 100%. I think

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <section id="behind-name">
+  <section>
     <div id="heading-name" class="sticky">
       <div class="container center">
         <div class="flex-1"></div>
